--- a/src/admin.less
+++ b/src/admin.less
@@ -1,6 +1,14 @@
-.adminContainer{
-    .NavLeft{
-        width: 100%;
-        height: calc(100%);
+.container{
+    .nav-left{
+        background-color: #001529;
+        color: #ffffff;
+        height: calc(100vh)
+       
+    }
+    .content{
+        padding: 0 20px;
+    }
+    .main{
+        background: #f0f2f5;
     }
 }
