--- a/src/component/Header/index.less
+++ b/src/component/Header/index.less
@@ -5,16 +5,22 @@
     color: white;
     font-size: 32px;
     font-weight: bold;
+    padding-right: 40px;
     .header_tips{
         height: 100%;
         display: flex;
         align-items: center;
+        span.ant-badge{
+            float: right;
+            margin-top: 15px;
+        }
         img{
             width: 40px;
             height: 40px;
             margin: 0 40px;
             border-radius: 40px;
             background: #002140;
+            float: right;
         }
     }
 }
