--- a/src/admin.less
+++ b/src/admin.less
@@ -6,7 +6,10 @@
        
     }
     .content{
-        padding: 0 20px;
+        margin: 0 20px;
+        min-height: 600px;
+        background: white;
+        
     }
     .main{
         background: #f0f2f5;
